last update on day 1

--- a/AL/Pages/Shared/Schemas/_Footer.cshtml
+++ b/AL/Pages/Shared/Schemas/_Footer.cshtml
@@ -1,5 +1,5 @@
 ﻿<footer class="border-top footer text-muted">
     <div class="container">
-        &copy; 2023 - AL - <a asp-area="" asp-page="/Privacy">Privacy</a>
+        &copy; 2023 - AL(Archive Law)
     </div>
 </footer>
