--- a/AL/Pages/Shared/Schemas/_Links.cshtml
+++ b/AL/Pages/Shared/Schemas/_Links.cshtml
@@ -1,2 +1,13 @@
 ﻿<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <link rel="stylesheet" href="~/css/site.css" />
+
+
+
+
+<!--Milligram is a minimalist CSS framework
+
+    UIkit is a minimalist framework but bigger than milligram
+
+    Headless UI is a modern library with a bit of elements
+
+    -->
