--- a/AL/Pages/Shared/Schemas/_Scripts.cshtml
+++ b/AL/Pages/Shared/Schemas/_Scripts.cshtml
@@ -1,3 +1,15 @@
 ﻿<script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
+
+
+
+
+<!--chart.js for diagrams and statistics
+
+    OverlayScrollbars is javascript scrollbar plugin that hides native scrollbars, provides custom styleable overlay scrollbars and keeps the native functionality and feeling.
+
+    TypeIt is JavaScript Animated Typing Utility
+
+    Material UI is an open-source React component library that implements Google's Material Design. (лучше его подключить вместо bootstrap)
+    -->
