--- a/AL/Pages/Choose/ChoosePage.cshtml
+++ b/AL/Pages/Choose/ChoosePage.cshtml
@@ -3,4 +3,140 @@
     ViewData["Title"] = "Lessons";
 }
 
-<p>choose</p>
+<div class="CardContainerAL">
+    <div class="CardAL">
+        <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
+            <div class="uk-card-media-left uk-cover-container">
+                <img src="https://maquette.pro/wp-content/uploads/2016/06/2-3.jpg" alt="" uk-cover>
+                <canvas width="600" height="400"></canvas>
+            </div>
+            <div>
+                <div class="uk-card-body">
+                    <h3 class="uk-card-title">Title</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="CardAL">
+        <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
+            <div class="uk-card-media-left uk-cover-container">
+                <img src="https://maquette.pro/wp-content/uploads/2016/06/2-3.jpg" alt="" uk-cover>
+                <canvas width="600" height="400"></canvas>
+            </div>
+            <div>
+                <div class="uk-card-body">
+                    <h3 class="uk-card-title">Title</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="CardAL">
+        <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
+            <div class="uk-card-media-left uk-cover-container">
+                <img src="https://maquette.pro/wp-content/uploads/2016/06/2-3.jpg" alt="" uk-cover>
+                <canvas width="600" height="400"></canvas>
+            </div>
+            <div>
+                <div class="uk-card-body">
+                    <h3 class="uk-card-title">Title</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="CardAL">
+        <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
+            <div class="uk-card-media-left uk-cover-container">
+                <img src="https://maquette.pro/wp-content/uploads/2016/06/2-3.jpg" alt="" uk-cover>
+                <canvas width="600" height="400"></canvas>
+            </div>
+            <div>
+                <div class="uk-card-body">
+                    <h3 class="uk-card-title">Title</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="CardAL">
+        <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
+            <div class="uk-card-media-left uk-cover-container">
+                <img src="https://maquette.pro/wp-content/uploads/2016/06/2-3.jpg" alt="" uk-cover>
+                <canvas width="600" height="400"></canvas>
+            </div>
+            <div>
+                <div class="uk-card-body">
+                    <h3 class="uk-card-title">Title</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="CardAL">
+        <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
+            <div class="uk-card-media-left uk-cover-container">
+                <img src="https://maquette.pro/wp-content/uploads/2016/06/2-3.jpg" alt="" uk-cover>
+                <canvas width="600" height="400"></canvas>
+            </div>
+            <div>
+                <div class="uk-card-body">
+                    <h3 class="uk-card-title">Title</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="CardAL">
+        <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
+            <div class="uk-card-media-left uk-cover-container">
+                <img src="https://maquette.pro/wp-content/uploads/2016/06/2-3.jpg" alt="" uk-cover>
+                <canvas width="600" height="400"></canvas>
+            </div>
+            <div>
+                <div class="uk-card-body">
+                    <h3 class="uk-card-title">Title</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="CardAL">
+        <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
+            <div class="uk-card-media-left uk-cover-container">
+                <img src="https://maquette.pro/wp-content/uploads/2016/06/2-3.jpg" alt="" uk-cover>
+                <canvas width="600" height="400"></canvas>
+            </div>
+            <div>
+                <div class="uk-card-body">
+                    <h3 class="uk-card-title">Title</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="CardAL">
+        <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
+            <div class="uk-card-media-left uk-cover-container">
+                <img src="https://maquette.pro/wp-content/uploads/2016/06/2-3.jpg" alt="" uk-cover>
+                <canvas width="600" height="400"></canvas>
+            </div>
+            <div>
+                <div class="uk-card-body">
+                    <h3 class="uk-card-title">Title</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
