--- a/AL/Pages/Shared/Schemas/_Header.cshtml
+++ b/AL/Pages/Shared/Schemas/_Header.cshtml
@@ -1,7 +1,7 @@
 ﻿<header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container">
-            <a class="navbar-brand" asp-area="" asp-page="/Index">AL</a>
+            <a class="navbar-brand" asp-area="" asp-page="/Index"><img src="~/img/logo.jpg" style="width:50px; height: 50px;"/></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
