--- a/AL/Pages/Shared/Schemas/_Links.cshtml
+++ b/AL/Pages/Shared/Schemas/_Links.cshtml
@@ -1,7 +1,9 @@
 ﻿<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<link rel="stylesheet" href="~/css/site.css" />
+<link rel="stylesheet" href="~/css/footer.css" />
+<link rel="stylesheet" href="~/css/choosepage.css" />
 <link rel="stylesheet" href="~/css/removes.css" />
-
+<link rel="stylesheet" type="text/css" href="~/css/bttn.css" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.15.23/dist/css/uikit.min.css" />
 
 
 
