--- a/AL/Pages/Shared/Schemas/_Scripts.cshtml
+++ b/AL/Pages/Shared/Schemas/_Scripts.cshtml
@@ -1,8 +1,9 @@
 ﻿<script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
-
-
+<script src="~/js/remover.js" asp-append-version="true"></script>
+<script src="https://cdn.jsdelivr.net/npm/uikit@3.15.23/dist/js/uikit.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/uikit@3.15.23/dist/js/uikit-icons.min.js"></script>
 
 <!--chart.js for diagrams and statistics
 
