--- a/AL/Pages/Index.cshtml
+++ b/AL/Pages/Index.cshtml
@@ -13,11 +13,15 @@
             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
     </div>
+
+    <br />
+
     <div class="MainPageChartItem">
-        <div>
-            <canvas id="myChart"></canvas>
+        <div class="MainPageChart">
+            <canvas id="myChart"/>
         </div>
     </div>
+
 </div>
 
 
