total upgrade and update buttons

--- a/AL/Pages/Choose/ChoosePage.cshtml
+++ b/AL/Pages/Choose/ChoosePage.cshtml
@@ -14,7 +14,9 @@
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Title</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                    <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                    <a class="nav-link text-dark" asp-page="/Lessons/LessonPage" asp-route-lessonNumber="1" >
+                        <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -29,7 +31,9 @@
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Title</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                    <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                    <a class="nav-link text-dark" asp-page="/Lessons/LessonPage" asp-route-lessonNumber="2">
+                        <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -44,7 +48,9 @@
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Title</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                    <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                    <a class="nav-link text-dark" asp-page="/Lessons/LessonPage" asp-route-lessonNumber="3">
+                        <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -59,7 +65,9 @@
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Title</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                    <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                    <a class="nav-link text-dark" asp-page="/Lessons/LessonPage" asp-route-lessonNumber="4">
+                        <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -74,7 +82,9 @@
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Title</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                    <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                    <a class="nav-link text-dark" asp-page="/Lessons/LessonPage" asp-route-lessonNumber="5">
+                        <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -89,7 +99,9 @@
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Title</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                    <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                    <a class="nav-link text-dark" asp-page="/Lessons/LessonPage" asp-route-lessonNumber="6">
+                        <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -104,7 +116,9 @@
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Title</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                    <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                    <a class="nav-link text-dark" asp-page="/Lessons/LessonPage" asp-route-lessonNumber="7">
+                        <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -119,22 +133,9 @@
                 <div class="uk-card-body">
                     <h3 class="uk-card-title">Title</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                    <button class="bttn-stretch bttn-sm bttn-success">Select</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="CardAL">
-        <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
-            <div class="uk-card-media-left uk-cover-container">
-                <img src="https://maquette.pro/wp-content/uploads/2016/06/2-3.jpg" alt="" uk-cover>
-                <canvas width="600" height="400"></canvas>
-            </div>
-            <div>
-                <div class="uk-card-body">
-                    <h3 class="uk-card-title">Title</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                    <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                    <a class="nav-link text-dark" asp-page="/Lessons/LessonPage" asp-route-lessonNumber="8">
+                        <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                    </a>
                 </div>
             </div>
         </div>
