--- a/AL/Pages/Shared/Schemas/_Footer.cshtml
+++ b/AL/Pages/Shared/Schemas/_Footer.cshtml
@@ -1,5 +1,5 @@
 ﻿<footer class="border-top footer text-muted">
-    <div class="container">
+    <div class="container" id="TextToType">
         &copy; 2023 - AL(Archive Law)
     </div>
 </footer>
