--- a/AL/Pages/Shared/Schemas/_Links.cshtml
+++ b/AL/Pages/Shared/Schemas/_Links.cshtml
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="~/css/removes.css" />
 <link rel="stylesheet" type="text/css" href="~/css/bttn.css" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.15.23/dist/css/uikit.min.css" />
-
+<link rel="stylesheet" type="text/css" href="~/css/lessonpage.css" />
 
 
 <!--
