change choose page

--- a/AL/Pages/Choose/ChoosePage.cshtml
+++ b/AL/Pages/Choose/ChoosePage.cshtml
@@ -7,15 +7,15 @@
     <div class="CardAL">
         <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
             <div class="uk-card-media-left uk-cover-container">
-                <img src="https://maquette.pro/wp-content/uploads/2016/06/2-3.jpg" alt="" uk-cover>
+                <img src="https://admkrai.krasnodar.ru/upload/iblock/3b8/3b86b8904112948a70f233904c1cdd7b.jpg" alt="" uk-cover>
                 <canvas width="600" height="400"></canvas>
             </div>
             <div>
                 <div class="uk-card-body">
-                    <h3 class="uk-card-title">Title</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                    <a class="nav-link text-dark" asp-page="/Lessons/LessonPage" asp-route-lessonNumber="1" >
-                        <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                    <h3 class="uk-card-title">Сущность и задачи архивного дела в судах России</h3>
+                    <p>Доброго времени суток, уважаемые студенты! Сегодня мы с вами ознакомимся с темой...</p>
+                    <a class="nav-link text-dark" asp-page="/Lessons/LessonPage" asp-route-lessonNumber="1">
+                        <button class="bttn-stretch bttn-sm bttn-success">Перейти</button>
                     </a>
                 </div>
             </div>
@@ -24,15 +24,15 @@
     <div class="CardAL">
         <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
             <div class="uk-card-media-left uk-cover-container">
-                <img src="https://maquette.pro/wp-content/uploads/2016/06/2-3.jpg" alt="" uk-cover>
+                <img src="https://ptzgovorit.ru/sites/default/files/original_nodes/1424216356966.cached.jpg" alt="" uk-cover>
                 <canvas width="600" height="400"></canvas>
             </div>
             <div>
                 <div class="uk-card-body">
-                    <h3 class="uk-card-title">Title</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    <h3 class="uk-card-title">Правовое регулирование архивного дела в судах</h3>
+                    <p>Здравствуйте, ребята! Сегодня с вами мы ознакомимся со второй темой нашего предмета...</p>
                     <a class="nav-link text-dark" asp-page="/Lessons/LessonPage" asp-route-lessonNumber="2">
-                        <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                        <button class="bttn-stretch bttn-sm bttn-success">Перейти</button>
                     </a>
                 </div>
             </div>
@@ -41,15 +41,15 @@
     <div class="CardAL">
         <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
             <div class="uk-card-media-left uk-cover-container">
-                <img src="https://maquette.pro/wp-content/uploads/2016/06/2-3.jpg" alt="" uk-cover>
+                <img src="https://a1datashred.com/wp-content/uploads/2020/06/200286508-001.jpg" alt="" uk-cover>
                 <canvas width="600" height="400"></canvas>
             </div>
             <div>
                 <div class="uk-card-body">
-                    <h3 class="uk-card-title">Title</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    <h3 class="uk-card-title">Учёт единиц архивного хранения в судах</h3>
+                    <p>Доброго времени суток, уважаемые коллеги! Сегодня мы ознакомимся с третьей темой нашего предмета...</p>
                     <a class="nav-link text-dark" asp-page="/Lessons/LessonPage" asp-route-lessonNumber="3">
-                        <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                        <button class="bttn-stretch bttn-sm bttn-success">Перейти</button>
                     </a>
                 </div>
             </div>
@@ -58,15 +58,15 @@
     <div class="CardAL">
         <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
             <div class="uk-card-media-left uk-cover-container">
-                <img src="https://maquette.pro/wp-content/uploads/2016/06/2-3.jpg" alt="" uk-cover>
+                <img src="https://romanowskylaw.com/wp-content/uploads/2018/11/romanowsky-law-contracts.jpg" alt="" uk-cover>
                 <canvas width="600" height="400"></canvas>
             </div>
             <div>
                 <div class="uk-card-body">
-                    <h3 class="uk-card-title">Title</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    <h3 class="uk-card-title">Организация ведения архивного делопроизводства в суде</h3>
+                    <p>Доброго времени суток, уважаемые студенты! Сегодня мы с вами ознакомимся с 4 темой нашего предмета...</p>
                     <a class="nav-link text-dark" asp-page="/Lessons/LessonPage" asp-route-lessonNumber="4">
-                        <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                        <button class="bttn-stretch bttn-sm bttn-success">Перейти</button>
                     </a>
                 </div>
             </div>
@@ -75,15 +75,15 @@
     <div class="CardAL">
         <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
             <div class="uk-card-media-left uk-cover-container">
-                <img src="https://maquette.pro/wp-content/uploads/2016/06/2-3.jpg" alt="" uk-cover>
+                <img src="https://sun9-38.userapi.com/impg/iFqo6aOxXHwre4u-bXNBPNtmHx-2Iq4VpaIEDA/tOIUgspnFMM.jpg?size=980x600&quality=95&sign=0fbd47a8e2302e35ebf382de4c3ccc2c&c_uniq_tag=dreOuRzwLb-GfxTTyL3Akj4QSUnsyCkx4jDi6cRKuU0&type=album" alt="" uk-cover>
                 <canvas width="600" height="400"></canvas>
             </div>
             <div>
                 <div class="uk-card-body">
-                    <h3 class="uk-card-title">Title</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    <h3 class="uk-card-title">Классификация и систематизация документов, образующихся в деятельности судов</h3>
+                    <p>Здравствуйте, дорогие коллеги! Сегодня мы ознакомимся с такими темами, как...</p>
                     <a class="nav-link text-dark" asp-page="/Lessons/LessonPage" asp-route-lessonNumber="5">
-                        <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                        <button class="bttn-stretch bttn-sm bttn-success">Перейти</button>
                     </a>
                 </div>
             </div>
@@ -92,32 +92,33 @@
     <div class="CardAL">
         <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
             <div class="uk-card-media-left uk-cover-container">
-                <img src="https://maquette.pro/wp-content/uploads/2016/06/2-3.jpg" alt="" uk-cover>
+                <img src="https://ekspertizy.org/blog/wp-content/uploads/zachem-nuzhna-jekspertiza-cennosti-dokumentov.jpg" alt="" uk-cover>
                 <canvas width="600" height="400"></canvas>
             </div>
             <div>
                 <div class="uk-card-body">
-                    <h3 class="uk-card-title">Title</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    <h3 class="uk-card-title">Производство экспертизы ценности документов, образующихся в деятельности суда. Организация работы экспертной комиссии суда. Организация работы экспертной комиссии суда</h3>
+                    <p>Доброго времени суток! На этом занятии мы ознакомимся с такими темами как...</p>
                     <a class="nav-link text-dark" asp-page="/Lessons/LessonPage" asp-route-lessonNumber="6">
-                        <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                        <button class="bttn-stretch bttn-sm bttn-success">Перейти</button>
                     </a>
                 </div>
             </div>
         </div>
     </div>
+    <br />
     <div class="CardAL">
         <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
             <div class="uk-card-media-left uk-cover-container">
-                <img src="https://maquette.pro/wp-content/uploads/2016/06/2-3.jpg" alt="" uk-cover>
+                <img src="https://sc01.alicdn.com/kf/H0f83edd3f51240bfa8a4a03a82a88f5aX.jpg" alt="" uk-cover>
                 <canvas width="600" height="400"></canvas>
             </div>
             <div>
                 <div class="uk-card-body">
-                    <h3 class="uk-card-title">Title</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    <h3 class="uk-card-title">Нормативные условия хранения документов архива суда</h3>
+                    <p>Здравствуйте, дорогие студенты! На данном уроке мы ознакомимся с темой...</p>
                     <a class="nav-link text-dark" asp-page="/Lessons/LessonPage" asp-route-lessonNumber="7">
-                        <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                        <button class="bttn-stretch bttn-sm bttn-success">Перейти</button>
                     </a>
                 </div>
             </div>
@@ -126,15 +127,15 @@
     <div class="CardAL">
         <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
             <div class="uk-card-media-left uk-cover-container">
-                <img src="https://maquette.pro/wp-content/uploads/2016/06/2-3.jpg" alt="" uk-cover>
+                <img src="https://e-history.kz/media/upload/ckimages/IMG_9436.jpg" alt="" uk-cover>
                 <canvas width="600" height="400"></canvas>
             </div>
             <div>
                 <div class="uk-card-body">
-                    <h3 class="uk-card-title">Title</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    <h1 class="uk-card-title">Состав документов судов, передаваемых на хранение в государственный архив. Состав документов судов, передаваемых на хранение в государственный архив.</h1>
+                    <p>Доброго времени суток! Сегодня мы познакомимся с завершающей темой нашего учебного курса...</p>
                     <a class="nav-link text-dark" asp-page="/Lessons/LessonPage" asp-route-lessonNumber="8">
-                        <button class="bttn-stretch bttn-sm bttn-success">Select</button>
+                        <button class="bttn-stretch bttn-sm bttn-success">Перейти</button>
                     </a>
                 </div>
             </div>
